WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167601
JSDOMBinding is too big. Split it up!
https://bugs.webkit.org/show_bug.cgi?id=167601
Summary
JSDOMBinding is too big. Split it up!
Sam Weinig
Reported
2017-01-30 13:23:12 PST
JSDOMBinding is too big. Split it up!
Attachments
Patch
(700.03 KB, patch)
2017-01-30 13:31 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch
(701.77 KB, patch)
2017-01-30 15:41 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch
(702.85 KB, patch)
2017-01-30 16:13 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch
(723.88 KB, patch)
2017-01-30 17:26 PST
,
Sam Weinig
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2017-01-30 13:31:52 PST
Created
attachment 300138
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-30 13:34:53 PST
Attachment 300138
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSDOMBindingSecurity.h:44: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:184: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:195: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 3 in 45 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2017-01-30 15:41:43 PST
Created
attachment 300154
[details]
Patch
WebKit Commit Bot
Comment 4
2017-01-30 15:43:52 PST
Attachment 300154
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSDOMBindingSecurity.h:44: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:184: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:195: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 3 in 47 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 5
2017-01-30 16:13:48 PST
Created
attachment 300156
[details]
Patch
WebKit Commit Bot
Comment 6
2017-01-30 16:16:40 PST
Attachment 300156
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSDOMBindingSecurity.h:44: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:184: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:195: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 3 in 49 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 7
2017-01-30 17:26:06 PST
Created
attachment 300166
[details]
Patch
WebKit Commit Bot
Comment 8
2017-01-30 17:27:30 PST
Attachment 300166
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:184: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/bindings/js/JSDOMWrapperCache.h:195: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 2 in 80 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 9
2017-01-30 19:38:58 PST
Committed
r211403
: <
http://trac.webkit.org/changeset/211403
>
Joseph Pecoraro
Comment 10
2017-01-30 22:24:59 PST
Awesome!
Csaba Osztrogonác
Comment 11
2017-01-31 02:33:58 PST
(In reply to
comment #9
)
> Committed
r211403
: <
http://trac.webkit.org/changeset/211403
>
It broke the Apple Mac cmake build, see
https://build.webkit.org/builders/Apple%20El%20Capitan%20CMake%20Debug%20%28Build%29/builds/11660
for details.
Csaba Osztrogonác
Comment 12
2017-02-01 03:09:08 PST
buildfix landed in
https://trac.webkit.org/changeset/211476
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug