[Mac][cmake] Unreviewed speculative buildfix after r211403. https://bugs.webkit.org/show_bug.cgi?id=167601

* UIProcess/API/Cocoa/WKWebView.mm:

Canonical link: https://commits.webkit.org/184715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211476 268f45cc-cd09-0410-ab3c-d52691b4dbfc